k8s/mysql.yaml

apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: practica-cd
spec:
  ports:
    - port: 3306
  selector:
    app: practica-cd
    role: mysql

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: practica-cd
  name: practica-cd-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: practica-cd
      role: mysql
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: practica-cd
        role: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:5.6
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3306
