k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: practica-cd
  name: practica-cd
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: practica-cd
  type: ClusterIP
status: {}
